--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint src/*.{ts,vue} && eslint src/**/*.{ts,vue}",
+    "lint:fix": "eslint --fix src/*.{ts,vue} && eslint --fix src/**/*.{ts,vue}"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -28,7 +29,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint-plugin-vue": "^7.19.0",
     "prettier": "^2.4.1",
     "typescript": "~4.1.5"
   }
