--- a/src/package.json
+++ b/src/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "eslint src/*.{ts,vue} && eslint src/**/*.{ts,vue}",
-    "lint:fix": "eslint --fix src/*.{ts,vue} && eslint --fix src/**/*.{ts,vue}"
+    "lint": "eslint './{lib,src,test}/**/*.{ts,vue}' && prettier './{lib,src,test}/**/*.{ts,vue}'",
+    "lint:fix": "eslint --fix './{lib,src,test}/**/*.{ts,vue}' && prettier --write './{lib,src,test}/**/*.{ts,vue}'"
   },
   "dependencies": {
     "core-js": "^3.6.5",
