--- a/src/package.json
+++ b/src/package.json
@@ -6,12 +6,20 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "eslint './{lib,src,test}/**/*.{ts,vue}' && prettier './{lib,src,test}/**/*.{ts,vue}'",
-    "lint:fix": "eslint --fix './{lib,src,test}/**/*.{ts,vue}' && prettier --write './{lib,src,test}/**/*.{ts,vue}'"
+    "lint:fix": "eslint --fix './{lib,src,test}/**/*.{ts,vue}' && prettier --write './{lib,src,test}/**/*.{ts,vue}'",
+    "lint-staged": "lint-staged",
+    "prepare": "cd .. && husky install src/.husky"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
+  },
+  "lint-staged": {
+    "*.{ts,vue}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -30,6 +38,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.19.0",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.2",
     "prettier": "^2.4.1",
     "typescript": "~4.4.3"
   }
