--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "serve:local": "NODE_ENV=local vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "eslint './{lib,src,test}/**/*.{ts,vue}' && prettier './{lib,src,test}/**/*.{ts,vue}'",
